Use all spark parameters when creating a spark context