@@ -1,6 +1,6 @@
 #!/bin/bash
 # Script to start the job manager
-# args: <work dir for context> <cluster address> <driver memory> [proxy_user]
+# args: <work dir for context> <cluster address> [proxy_user] [additional parameters]
 # if <driver memory> is 0, the default value will be used
 set -e
 
@@ -14,36 +14,34 @@ get_abs_script_path
 
 . $appdir/setenv.sh
 
+WORK_DIR=$1
+CLUSTER_ADDRESS=$2
+SPARK_CONTEXT_NAME=$3
+SPARK_CONFIGURATION=$4
+
 # Override logging options to provide per-context logging
 LOGGING_OPTS="-Dlog4j.configuration=file:$appdir/log4j-server.properties
-              -DLOG_DIR=$1"
+              -DLOG_DIR=$1
+              -DSPARK_CONTEXT_NAME=$SPARK_CONTEXT_NAME"
 
-GC_OPTS="-XX:+UseConcMarkSweepGC
-         -verbose:gc -XX:+PrintGCTimeStamps -Xloggc:$appdir/gc.out
+GC_OPTS="-verbose:gc -XX:+PrintGCTimeStamps -Xloggc:$appdir/gc.out
          -XX:MaxPermSize=512m
-         -XX:+CMSClassUnloadingEnabled "
+         -XX:+UseCompressedOops -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+         -XX:+UseG1GC -XX:MaxHeapFreeRatio=70"
 
-JAVA_OPTS="-XX:MaxDirectMemorySize=$MAX_DIRECT_MEMORY
+JAVA_OPTS="-XX:MaxDirectMemorySize=512M
            -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true"
+
+EXTRA_CLASSPATH_OPTS="/etc/hadoop/conf:/etc/hive/conf:/usr/lib/hadoop-lzo/lib/*:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/emrfs/conf:/usr/share/aws/emr/emrfs/lib/*:/usr/share/aws/emr/emrfs/auxlib/*:/usr/lib/hadoop/hadoop-aws.jar:/home/hadoop/spark-jobserver/libs/*"
 
 MAIN="spark.jobserver.JobManager"
 
-if [ ! -z "$3" ] && [ "$3" -ne "0" ]; then
-    JOBSERVER_MEMORY="$3"
-fi
+cmd="$SPARK_HOME/bin/spark-submit --class $MAIN --driver-memory $JOBSERVER_MEMORY
+  --conf \"spark.executor.extraJavaOptions=$LOGGING_OPTS\"
+  --conf \"spark.driver.extraClassPath=$EXTRA_CLASSPATH_OPTS\"
+  --conf \"spark.executor.extraClassPath=$EXTRA_CLASSPATH_OPTS\"
+  --driver-java-options \"$GC_OPTS $JAVA_OPTS $LOGGING_OPTS $CONFIG_OVERRIDES\"
+  $appdir/spark-job-server.jar $WORK_DIR $CLUSTER_ADDRESS $SPARK_CONFIGURATION"
 
-if [ ! -z $4 ]; then
-  cmd='$SPARK_HOME/bin/spark-submit --class $MAIN --driver-memory $JOBSERVER_MEMORY
-  --conf "spark.executor.extraJavaOptions=$LOGGING_OPTS"
-  --proxy-user $4
-  --driver-java-options "$GC_OPTS $JAVA_OPTS $LOGGING_OPTS $CONFIG_OVERRIDES"
-  $appdir/spark-job-server.jar $1 $2 $conffile'
-else
-  cmd='$SPARK_HOME/bin/spark-submit --class $MAIN --driver-memory $JOBSERVER_MEMORY
-  --conf "spark.executor.extraJavaOptions=$LOGGING_OPTS"
-  --driver-java-options "$GC_OPTS $JAVA_OPTS $LOGGING_OPTS $CONFIG_OVERRIDES"
-  $appdir/spark-job-server.jar $1 $2 $conffile'
-fi
-
-eval $cmd > /dev/null 2>&1 &
+eval $cmd > "$WORK_DIR/spark-job-server.log" 2>&1 &
 # exec java -cp $CLASSPATH $GC_OPTS $JAVA_OPTS $LOGGING_OPTS $CONFIG_OVERRIDES $MAIN $1 $2 $conffile 2>&1 &
